--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             let bringToFrontButtonContainer = null;
             const BringToFrontButton = L.Control.extend({
                 options: {
-                    position: 'bottomleft'
+                    position: 'bottomright'
                 },
                 onAdd: function (map) {
                     bringToFrontButtonContainer = L.DomUtil.create('div', 'leaflet-bar leaflet-control leaflet-control-custom');
